# claude-vault

./: Cargo.toml  LICENSE  README.md
completions/: _claude-vault  claude-vault.bash  claude-vault.fish
docs/: BEST_PRACTICES.md  CLAUDE_CODE_INTEGRATION.md  FAQ.md  PHASE_6_OAUTH_PLAN.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
src/: error.rs  main.rs  types.rs  utils.rs
src/cli/: commands.rs  handlers.rs  mod.rs
src/core/: cache.rs  claude_code.rs  config.rs  detector.rs  keychain.rs  mod.rs  oauth.rs  profile.rs
