[package]
name = "claude-vault"
version = "0.1.0"
edition = "2021"
authors = ["Ramos Choi <68529402+max-dog@users.noreply.github.com>"]
license = "MIT"
description = "Secure credential management for Claude API"
repository = "https://github.com/max-dog/claude-vault"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
keyring = "2.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
dirs = "5.0"
walkdir = "2.4"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
